add modify blog,view critique,comment blog article and fix bug
this bug is forget the session cache,so can't modify the user infomation

--- a/WebRoot/resource/css/style.css
+++ b/WebRoot/resource/css/style.css
@@ -22,3 +22,29 @@ a.one{
 a.one:-webkit-any-link {
     cursor: auto;
 }
+
+
+
+
+a.two:LINK {
+	color:white;
+}
+
+a.two:VISITED {
+	color:white;
+}
+
+a.two:HOVER {
+	color:#DDEEFF;
+}
+
+a.two:ACTIVE{
+	color:white;
+}
+
+a.two{
+	text-decoration: none;
+}
+a.two:-webkit-any-link {
+    cursor: auto;
+}
